<resources>
    <string name="app_name">ContactBook</string>
    <string name="sarmadcontactbook">SarmadContactBook</string>
    <string name="splashimage">splashImage</string>
    <string name="name">Name</string>
    <string name="contact">contact</string>
    <string name="contacts">CONTACTS</string>
    <string name="btnopendialog">btnOpenDialog</string>
    <string name="add_contact">Add Contact</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_number">Enter Number</string>
    <string name="add">Add</string>
    <string name="update_contact">Update Contact</string>
    <string name="update">Update</string>
    <string name="name_txt">Name</string>
    <string name="contat_txt">Contact</string>
    <string name="dial_btn">Dial</string>
    <string name="msg_btn">Message</string>
    <string name="email_btn">Email</string>
    <string name="share_btn">Share</string>
</resources>